# CourseProject-GIOS

p1/echo/: echoserver.c
p1/mtgf/: gfclient_download.c  handler.c
p1/transfer/: client  cs8803.txt  server
p3/cache/: simplecached
p3/server/: webproxy
p4/rpc_mt/: submit.py
project1/echo/: server
project1/gfclient/: gfclient.c
project1/gfclient_mt/: gfclient_download.c
project1/gflib/: CMakeLists.txt  gfserver.c
project1/mtgf/: CMakeLists.txt  pr1_gfclient_mt-result-2017-06-08-19-34-39.json
project1/transfer/: transferclient.c  transferserver.c
project3/proxy_cache/: handle_with_cache.c  webproxy.c
project3/proxy_server/: handle_with_curl.c  webproxy.c
project4/: minify_via_rpc.c  minifyjpeg.c  minifyjpeg.h  minifyjpeg.x  minifyjpeg_clnt.c  minifyjpeg_svc.c
project_1/echo/: CMakeLists.txt  client  echoclient.c
project_1/gflib/: pr1_gfclient-result-2017-06-08-19-48-51.json
project_1/mtgf/: gfserver_main.c
project_1/transfer/: CMakeLists.txt
project_3/cache/: CMakeLists.txt  simplecached.c  webproxy
project_3/server/: CMakeLists.txt
